src/test/deca/context/valid/class_with_same_name_field.deca
/*
    Description : Classe avec un champ du même nom qu'une classe

    Résultat: OK (règle 2.5)
*/
class A{
}
class B{
    A a;
}
